Search bar looks weird on mobile so I fixed it

--- a/content/site.css
+++ b/content/site.css
@@ -13,6 +13,10 @@
   margin-right:8px;
 }
 
+#search {
+  width: 158px; 
+}
+
 body {
   margin: 0px;
   top: 0px;
